# COMP427

./: CMakeLists.txt
Section4/: Decimal.cpp  Integer.cpp  Integer.h  Number.cpp  Polynomial.cpp  Polynomial.h  Rational.cpp  Rational.h  Term.cpp  Term.h  main.cpp
Task1/: Test.cpp
Task2/: main.cpp
